// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should SmallMovieCard render correctly with playing video 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <a
    className="small-movie-card__link"
    href="/films/1"
    onClick={[Function]}
  >
    <div
      className="small-movie-card__image"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <MoviePreview
        playVideoSrc="https://some-link"
        src="img/the-grand-budapest-hotel-poster.jpg"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      The Grand Budapest Hotel
    </h3>
  </a>
</article>
`;

exports[`Should SmallMovieCard render correctly without playing video 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <a
    className="small-movie-card__link"
    href="/films/1"
    onClick={[Function]}
  >
    <div
      className="small-movie-card__image"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <img
        alt="The Grand Budapest Hotel"
        height="175"
        src="img/the-grand-budapest-hotel-poster.jpg"
        width="280"
      />
    </div>
    <h3
      className="small-movie-card__title"
    >
      The Grand Budapest Hotel
    </h3>
  </a>
</article>
`;
